@@ -14,21 +14,13 @@ export HOME := $(CURDIR)/.fakehome
 
 export PYBUILD_NAME=frida
 %:
-	dh $@ --with quilt,python3 --buildsystem=none
-
-override_dh_auto_build:
-	$(MAKE) $(PYTHON)
-	$(MAKE) $(TOOLS)
-
-override_dh_auto_install:
-	mkdir -p debian/frida/usr
-	cp -r $(DIR)/* debian/frida/usr
-	mkdir -p debian/frida/usr/lib/$(DEB_HOST_MULTIARCH)
-	mv debian/frida/usr/lib/pkgconfig debian/frida/usr/lib/$(DEB_HOST_MULTIARCH)
+	dh $@ --with quilt,python3 --buildsystem=makefile
 
 override_dh_python3:
 	dh_python3 --no-ext-rename
 
+override_dh_auto_clean:
+	rm -rf build/
+
 override_dh_clean:
-	$(MAKE) clean
-	dh_clean build/ .fakehome/
+	dh_clean deps/ $(HOME)/
