@@ -5,6 +5,12 @@ frida (16.2.5~pirogue1) UNRELEASED; urgency=medium
      - stop-looking-at-main.diff (no longer needed).
   * Refresh patch:
      - adjust-versioning-for-debian-tags.diff (context updated).
+  * Adjust buildsystem:
+     - Switch from none to makefile.
+     - Delete the dh_auto_build override.
+     - Add dh_auto_clean override, cleaning build/; letting `make clean`
+       run would trigger issues otherwise.
+     - Additionally clean the deps/ directory, where SDKs are downloaded.
 
  -- Cyril Brulebois <cyril@debamax.com>  Tue, 21 May 2024 23:56:45 +0200
 
